# stopbus

./: .gitignore  2025.09.20 - Migration & updating plan.md  2025.11.06 - COMPREHENSIVE-ARCHITECTURE.md  ABOUT.RC  AGENTS.md  CLAUDE.md  CTL3D.PAS  CTL3D.TPU  Cargo.toml  GEMINI.md  README.md  RESOURCE.BAT  STOPBUS.BAK  STOPBUS.PAS  STOPBUS.RES  STOPBUS.TXT  STOPBUS.~RE
.github/workflows/: release.yml
HELP/: STOPBUS.ERR  STOPBUS.GID  STOPBUS.HLP  STOPBUS.HPJ  STOPBUS.RTF
RELEASE/: STOPBUS.TXT
crates/stopbus-core/: Cargo.toml
crates/stopbus-core/src/: lib.rs
crates/stopbus-ui/: Cargo.toml  build.rs
crates/stopbus-ui/resources/: stopbus.rc
crates/stopbus-ui/src/: main.rs
docs/: card-bitmap-normalization-log.md  help-assets-inventory.md  resource-embedding-plan.md  resource-id-map.md  resource-reuse-plan.md  stopbus-architecture-notes.md
help_bmp/: MAINWIN.SHG  OPTNWIN.SHG
installers/: StopTheBus.iss
tools/: extract_cards.py  update_about_text.py
wrk_docs/: 2025.11.06 - legacy-pascal-analysis.md  2025.11.06 - project-structure-overview.md  2025.11.06 - resource-build-pipeline.md  2025.11.06 - stopbus-core-architecture.md  2025.11.06 - stopbus-ui-architecture.md  2026.01.04 - CC - Coverage Improvement Completion Final.md  2026.01.04 - CC - Coverage Improvement Completion.md  2026.01.04 - CC - Coverage Improvement Plan.md  2026.01.04 - CC - Initial Coverage Assessment.md  README.md
