[package]
name = "stopbus-ui"
version = "2.0.0"
edition = "2021"
build = "build.rs"
autobins = false

[[bin]]
name = "stopbus"
path = "src/main.rs"

[dependencies]
stopbus-core = { path = "../stopbus-core" }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
embed-resource = "3.0"


